--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,7 @@ html {
     --secondary-foreground: 210 40% 98%;
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
-    --accent: 180 100% 25.5%;
+    --accent: 140 70% 20%;
     --accent-foreground: 210 40% 98%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
@@ -48,7 +48,7 @@ html {
     --secondary-foreground: 210 40% 98%;
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
-    --accent: 180 100% 25.5%;
+    --accent: 140 70% 20%;
     --accent-foreground: 210 40% 98%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
@@ -64,9 +64,7 @@ html {
   }
   body {
     @apply bg-background text-foreground;
-    background-image: url('/background.png');
-    background-size: cover;
-    background-position: center;
+    background-image: linear-gradient(to bottom right, hsl(var(--primary)), hsl(var(--accent)));
     background-attachment: fixed;
   }
 }
